Fix the GroupGrid expand/collapse issue

--- a/styles/themes/base/grid/group.less
+++ b/styles/themes/base/grid/group.less
@@ -20,5 +20,5 @@
 .grid-group .text
 {
     font-weight: 500;
-    vertical-align: text-top;
+    vertical-align: middle;
 }
